2000-05-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 11273: Completion/Base/_argument_sets,
 	Completion/Base/_arguments: option name clash in _arguments
	
	* 11272: Completion/Base/_arguments: fix for _arguments without
 	options and no more arguments to complete
	
	* 11270: Doc/Zsh/compsys.yo, Src/Zle/computil.c: new -A and -S
 	options to _arguments; `-opt=-' specs for options whose argument
 	has to come after the `='
	
2000-05-08  Oliver Kiddle  <opk@zsh.org>

	* 11268: Doc/Zsh/compsys.yo, Doc/Zsh/builtins.yo: minor typo fixes

	* unposted: Etc/CONTRIBUTORS fix

2000-05-08  Bart Schaefer  <schaefer@zsh.org>

	* 11264: Doc/Zsh/compat.yo: Missed bit for 10771.

2000-05-08  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11260: Doc/Zsh/options.yo: docs for 11044

	* Hiroki Tamakoshi: 11044: Src/options.c, Src/utils.c, Src/zsh.h: 
	Option to use Dvorak keyboard in spell-checking.

2000-05-08  Geoff Wing  <gcw@zsh.org>

	* gcw: unposted: Etc/CONTRIBUTORS fix

2000-05-08  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11252: Functions/Zftp/zf*: context should be
	e.g. `:zftp:zfopen', no colon at the end.

2000-05-08  Sven Wischnowsky  <wischnow@zsh.org>

	* 11255: Src/Modules/zpty.c: close fd for pty-master in sub-shell
	
	* 11253: Completion/Base/_arguments, Src/Zle/computil.c: more
 	problems with optional arguments in _arguments
	
	* 11248: Src/Zle/compmatch.c: better cursor positioning in words
 	with multiple ambiguous word parts
	
2000-05-08  Tanaka Akira  <akr@zsh.org>

	* Bart, Tanaka Akira: 11247: Don't signal to a process group which
	has only zombie processes.

2000-05-08  Peter Stephenson <pws@zsh.org>

	* Config/version.mk: 3.1.7-pre-3

2000-05-08  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11244: Completion/Builtins/_zstyle, Completion/Core/_description,
 	Completion/Core/_expand, Doc/Zsh/compsys.yo: make _expand call
 	_complete when called from _expand_word; add ignore-line style to
 	ignore words already on the line
	